Fixed: <x-numberinput> placeholder text has wrong color

--- a/themes/adwaita-dark.css
+++ b/themes/adwaita-dark.css
@@ -1061,7 +1061,7 @@ x-numberinput[error] {
 
 /* Placeholder */
 x-numberinput > x-label {
-  color: color(srgb 0 0 0 / 0.4);
+  color: color(srgb 1 1 1 / 0.4);
   font-weight: 600;
 }
 
